# Detection-of-Respiratory-Pathologies-Through-Acoustic-Feature-Analysis

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  registry_cli.py
ai4health/: __init__.py  dataset.py  features.py  plots.py
ai4health/modeling/: __init__.py  cnn_lstm.py  dataloaders.py  predict.py  registry.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: registry.json
models/CNN/v1/: config.yaml  metrics.json
models/CNN/v200/: config.yaml  metrics.json
models/CNN/v201/: config.yaml  metrics.json
models/CNN/v202/: config.yaml  metrics.json
notebooks/: 04_inspect_predictions.ipynb  1.0-am-explore-filter.ipynb  1.0-explore-data.ipynb  2.0-am-visualize-mfccs.ipynb
notebooks/data/processed/: metadata_clean.csv
notebooks/data/processed/mfccs/: 00039425-7f3a-42aa-ac13-834aaa2b6b92.npy  0009eb28-d8be-4dc1-92bb-907e53bc5c7a.npy  001328dc-ea5d-4847-9ccf-c5aa2a3f2d0f.npy  001e2f19-d81c-4029-b33c-d2db56b23a4a.npy  0028b68c-aca4-4f4f-bb1d-cb4ed5bbd952.npy  00291cce-36a0-4a29-9e2d-c1d96ca17242.npy  002d28bc-7806-4dfb-9c9b-afa8cb623cac.npy  0037f67c-0d6f-42e6-ab94-66499d4d2bf4.npy  003e1bf6-2ecf-4a00-9198-29db34e8d7ac.npy  0044964d-f7e9-43e3-831f-ae3e6374a9a4.npy  0044cb7b-448c-44e5-8302-ad8bd106fe3e.npy  004c24d8-e8cd-4755-86f6-5a1d8c7920c7.npy  005887c9-4bb1-4f13-86b2-1c7b3cee0881.npy  005b8518-03ba-4bf5-86d2-005541442357.npy  005bca13-18d1-4514-a086-cc8c3fafeeb2.npy  (+11189 more)
registry/: registry_manager.py
tests/: test_dataset.py  test_model_dataloaders.py
tests/data/processed/: metadata_clean.csv
(+1 files in other folders)
